1.refract project structure 2. support jdk21 vector api